--- a/baselines/niid_bench/niid_bench/conf/fedavg_base.yaml
+++ b/baselines/niid_bench/niid_bench/conf/fedavg_base.yaml
@@ -3,19 +3,20 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 
-num_clients: 10
-num_epochs: 10
-batch_size: 64
-clients_per_round: 10
+num_clients: 4
+num_epochs: 3
+batch_size: 128
+clients_per_round: 4
 learning_rate: 0.01
-num_rounds: 50
-partitioning: "dirichlet"
-dataset_name: "cifar10"
+num_rounds: 20
+partitioning: "iid"
+dataset_name: "femnist"
 dataset_seed: 42
 alpha: 0.5
 labels_per_client: 2 # only used when partitioning is label quantity
 momentum: 0.9
 weight_decay: 0.00001
+model_name: mlp
 
 client_fn:
   _target_: niid_bench.client_fedavg.gen_client_fn
@@ -34,13 +35,14 @@ dataset:
   seed: ${dataset_seed}
   alpha: ${alpha}
   labels_per_client: ${labels_per_client}
+  frac: 0.2 # fraction of the dataset to use
 
 model:
   # model config
   _target_: niid_bench.models.CNN
-  input_dim: 400
-  hidden_dims: [120, 84]
-  num_classes: 10
+  input_dim: None
+  hidden_dims: [64, 256, 128, 64]
+  output_dim: 62
 
 strategy:
   _target_: flwr.server.strategy.FedAvg # points to your strategy (either custom or exiting in Flower)
@@ -54,8 +56,8 @@ strategy:
 client:
   # client config
 
-server_device: cpu
+server_device: cuda:0
 
 client_resources:
-  num_cpus: 4
-  num_gpus: 0.0
+  num_cpus: 32
+  num_gpus: 1.0
