--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "baselines/niid_bench/leaf"]
 	path = baselines/niid_bench/leaf
 	url = https://github.com/TalwalkarLab/leaf
+[submodule "baselines/niid_bench/NVFlare"]
+	path = baselines/niid_bench/NVFlare
+	url = https://github.com/NVIDIA/NVFlare.git
