--- a/baselines/niid_bench/niid_bench/conf/fedavg_base.yaml
+++ b/baselines/niid_bench/niid_bench/conf/fedavg_base.yaml
@@ -3,12 +3,12 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 
-num_clients: 4
+num_clients: 3
 num_epochs: 3
-batch_size: 128
-clients_per_round: 4
+batch_size: 8
+clients_per_round: 3
 learning_rate: 0.01
-num_rounds: 20
+num_rounds: 100
 partitioning: "iid"
 dataset_name: "femnist"
 dataset_seed: 42
@@ -16,7 +16,7 @@ alpha: 0.5
 labels_per_client: 2 # only used when partitioning is label quantity
 momentum: 0.9
 weight_decay: 0.00001
-model_name: mlp
+model_name: resnet
 
 client_fn:
   _target_: niid_bench.client_fedavg.gen_client_fn
