--- a/baselines/treesXnets/treesXnets/conf/base.yaml
+++ b/baselines/treesXnets/treesXnets/conf/base.yaml
@@ -3,6 +3,11 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 num_clients: 3
+num_rounds: 3
+batch_size: 64
+device: cuda:0
+task: None
+strategy_name: fedavg
 
 dataset:
   name: imodels/credit-card
@@ -10,13 +15,29 @@ dataset:
   id_col: None
   num_clients: ${num_clients}
   val_frac: 0.0
+  num_input: 0
+  num_classes: 0
 
 model:
-  # model config
+  _target_: treesXnets.models.MLP
+  model_size: small  # small, mid, large (check in model file for more info)
+  input_dim: ${dataset.num_input}
+  output_dim: ${dataset.num_classes}
+  task: ${task}
+  batch_size: ${batch_size}
+
 
 strategy:
   _target_: # points to your strategy (either custom or exiting in Flower)
   # rest of strategy config
 
-client:
+client_fn:
   _target_: treesXnets.client.gen_client_fn
+  _recursive_: False
+
+client: 
+  batch_size: ${batch_size}
+
+client_resources:
+  num_cpus: 16
+  num_gpus: 1
