--- a/baselines/treesXnets/outputs/2023-11-24/16-22-55/.hydra/config.yaml
+++ b/baselines/treesXnets/outputs/2023-11-24/16-22-55/.hydra/config.yaml
@@ -1,7 +1,3 @@
----
-# this is the config that will be loaded as default by main.py
-# Please follow the provided structure (this will ensuring all baseline follow
-# a similar configuration structure and hence be easy to customise)
 num_clients: 3
 num_rounds: 3
 num_epochs: 3
@@ -9,7 +5,6 @@ batch_size: 64
 device: cuda:0
 task: None
 strategy_name: fedavg
-
 dataset:
   name: imodels/credit-card
   partition: linear
@@ -18,34 +13,27 @@ dataset:
   val_frac: 0.0
   num_input: 0
   num_classes: 0
-
 model:
   _target_: treesXnets.models.MLP
-  model_size: small  # small, mid, large (check in model file for more info)
+  model_size: small
   input_dim: ${dataset.num_input}
   output_dim: ${dataset.num_classes}
   task: ${task}
   batch_size: ${batch_size}
-
-
 strategy:
-  _target_: # points to your strategy (either custom or exiting in Flower)
-  # rest of strategy config
-
+  _target_: null
 client_fn:
   _target_: treesXnets.client.gen_client_fn
-  _recursive_: False
-
-client: 
+  _recursive_: false
+client:
   batch_size: ${batch_size}
   task: ${task}
   dataset_name: ${dataset.name}
   strategy_name: ${strategy_name}
   lr: 0.01
-  wd: 0.00
+  wd: 0.0
   device: ${device}
   num_epochs: ${num_epochs}
-
 client_resources:
   num_cpus: 16
   num_gpus: 1
