--- a/baselines/treesXnets/treesXnets/conf/base.yaml
+++ b/baselines/treesXnets/treesXnets/conf/base.yaml
@@ -3,7 +3,7 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 num_clients: 3
-num_rounds: 8
+num_rounds: 10
 num_epochs: 3
 batch_size: 64
 device: cuda:0
@@ -12,6 +12,7 @@ strategy_name: fedavg
 learning_rate: 0.01
 weight_decay: 0.00
 model_name: xgboost
+centralized_eval: False
 
 dataset:
   name: imodels/credit-card
@@ -36,7 +37,7 @@ strategy:
   # rest of strategy config
 
 client_fn:
-  _target_: treesXnets.client.gen_client_fn
+  _target_: treesXnets.client.get_client_fn
   _recursive_: False
 
 client: 
@@ -48,6 +49,7 @@ client:
   wd: ${weight_decay}
   device: ${device}
   num_epochs: ${num_epochs}
+  num_local_round: 1
 
 client_resources:
   num_cpus: 16
