--- a/baselines/treesXnets/treesXnets/conf/base.yaml
+++ b/baselines/treesXnets/treesXnets/conf/base.yaml
@@ -3,16 +3,16 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 num_clients: 3
-num_rounds: 10
+num_rounds: 100
 num_epochs: 3
 batch_size: 64
 device: cuda:0
 task: None
 strategy_name: fedavg
-learning_rate: 0.01
+learning_rate: 0.02
 weight_decay: 0.00
-model_name: xgboost
-centralized_eval: False
+model_name: mlp
+centralized_eval: True
 
 dataset:
   name: imodels/credit-card
@@ -30,6 +30,9 @@ model:
   output_dim: ${dataset.num_classes}
   task: ${task}
   batch_size: ${batch_size}
+  n_channel: 1
+  client_tree_num: 2
+  num_clients: ${num_clients}
 
 
 strategy:
@@ -49,7 +52,9 @@ client:
   wd: ${weight_decay}
   device: ${device}
   num_epochs: ${num_epochs}
-  num_local_round: 1
+  num_local_round: 4
+  client_tree_num: 3
+  num_clients: ${num_clients}
 
 client_resources:
   num_cpus: 16
