--- a/baselines/treesXnets/treesXnets/conf/base.yaml
+++ b/baselines/treesXnets/treesXnets/conf/base.yaml
@@ -3,21 +3,22 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 num_clients: 3
-num_rounds: 15
+num_rounds: 30
 num_epochs: 3
-batch_size: 128
+batch_size: 64
 device: cuda:0
 task: None
 strategy_name: fedavg
-learning_rate: 0.01
-weight_decay: 0.00
-model_name: resnet
+lr: 0.01
+wd: 0.00
+model_name: xgboost
 centralized_eval: True
 seed: 42
+federated: True
 
 dataset:
   name: reg_cat_house_sales
-  partition: linear
+  partition: iid
   id_col: None
   num_clients: ${num_clients}
   val_frac: 0.0
@@ -27,7 +28,7 @@ dataset:
 
 model:
   _target_: treesXnets.models.ResNet
-  model_size: large  # small, medium, large (check in model file for more info)
+  model_size: medium  # small, medium, large (check in model file for more info)
   input_dim: ${dataset.num_input}
   output_dim: ${dataset.num_classes}
   task: ${task}
@@ -57,14 +58,26 @@ client:
   task: ${task}
   dataset_name: ${dataset.name}
   strategy_name: ${strategy_name}
-  lr: ${learning_rate}
-  wd: ${weight_decay}
+  lr: ${lr}
+  wd: ${wd}
   device: ${device}
   num_epochs: ${num_epochs}
   num_local_round: 4
   client_tree_num: 3
   num_clients: ${num_clients}
+  num_classes: ${dataset.num_classes}
+  xgboost: ${xgboost}
 
 client_resources:
   num_cpus: 16
   num_gpus: 1
+
+xgboost:
+  objective: reg:squarederror
+  eta: ${lr}
+  max_depth: 6
+  eval_metric: auc
+  nthread: 16
+  num_parallel_tree: 1
+  subsample: 1.0
+  tree_method: "hist"
