--- a/baselines/treesXnets/treesXnets/conf/base.yaml
+++ b/baselines/treesXnets/treesXnets/conf/base.yaml
@@ -3,13 +3,13 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 num_clients: 10
-num_rounds: 3
+num_rounds: 100
 num_epochs: 3
 batch_size: 64
 device: cuda:0
 task: None
-strategy_name: fedavg
-lr: 0.01
+strategy_name: fedprox
+lr: 0.02
 wd: 0.00
 model_name: mlp
 centralized_eval: True
@@ -17,7 +17,7 @@ seed: 42
 federated: True
 
 dataset:
-  name: reg_cat_house_sales
+  name: clf_num_default-of-credit-card-clients
   partition: iid
   id_col: None
   num_clients: ${num_clients}
@@ -46,6 +46,7 @@ strategy:
   fraction_fit: 1.0
   fraction_evaluate: 1.0
   evaluate_fn: None
+  proximal_mu: 0.1
   on_evaluate_config_fn: 
     _target_: treesXnets.strategy.get_evaluate_config
 
