--- a/baselines/treesXnets/pyproject.toml
+++ b/baselines/treesXnets/pyproject.toml
@@ -40,6 +40,7 @@ classifiers = [
 python = ">=3.8.15, <3.12.0"  # don't change this
 flwr = { extras = ["simulation"], version = "1.5.0" }
 hydra-core = "1.3.2" # don't change this
+flwr-datasets = "^0.0.2"
 
 [tool.poetry.dev-dependencies]
 isort = "==5.11.5"
