--- a/baselines/treesXnets/pyproject.toml
+++ b/baselines/treesXnets/pyproject.toml
@@ -38,7 +38,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.8.15, <3.12.0"  # don't change this
-flwr = { extras = ["simulation"], version = "1.5.0" }
+flwr = "^1.7.0"
 hydra-core = "1.3.2" # don't change this
 flwr-datasets = "^0.0.2"
 
