--- a/baselines/treesXnets/treesXnets/conf/base.yaml
+++ b/baselines/treesXnets/treesXnets/conf/base.yaml
@@ -3,11 +3,11 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 num_clients: 10
-num_rounds: 3
+num_rounds: 300
 num_epochs: 3
 batch_size: 64
 device: cuda:0
-task: None
+task: multi
 strategy_name: fedprox
 lr: 0.005
 wd: 0.00
@@ -17,7 +17,7 @@ seed: 42
 federated: True
 
 dataset:
-  name: clf_num_default-of-credit-card-clients
+  name: synthetic
   partition: label
   id_col: None
   num_clients: ${num_clients}
@@ -25,6 +25,7 @@ dataset:
   num_input: 0
   num_classes: 0
   test_frac: 0.2
+  fraction: 0.2
 
 model:
   _target_: treesXnets.models.ResNet
