--- a/baselines/treesXnets/treesXnets/conf/base.yaml
+++ b/baselines/treesXnets/treesXnets/conf/base.yaml
@@ -3,7 +3,7 @@
 # Please follow the provided structure (this will ensuring all baseline follow
 # a similar configuration structure and hence be easy to customise)
 num_clients: 10
-num_rounds: 300
+num_rounds: 30
 num_epochs: 3
 batch_size: 64
 device: cuda:0
@@ -11,14 +11,14 @@ task: multi
 strategy_name: fedprox
 lr: 0.005
 wd: 0.00
-model_name: mlp
+model_name: resnet
 centralized_eval: True
 seed: 42
 federated: True
 
 dataset:
-  name: synthetic
-  partition: label
+  name: reg_cat_analcatdata_supreme
+  partition: gaussian
   id_col: None
   num_clients: ${num_clients}
   val_frac: 0.0
@@ -26,6 +26,8 @@ dataset:
   num_classes: 0
   test_frac: 0.2
   fraction: 0.2
+  num_labels_allotted: 3
+  noise: 0.1
 
 model:
   _target_: treesXnets.models.ResNet
